test/success/integration/_succ_type_1.hs
x :: Int
main = print "hello"