test/fail/integration/_fail_sem_expr_times_1.hs
x :: Int
x = "hello" * 4
main = print "hello"